test/files/neg/once-op.check
once-op.scala:7: warning: call to an affine reference value it is unsafe after a once-op has been called
  println(it.hasNext)
             ^
once-op.scala:8: warning: call to an affine reference value it is unsafe after a once-op has been called
  println(it.take(2))
             ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
